# CMakeSample

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
C/: CMakeLists.txt
C/CApp1/: CMakeLists.txt
C/CApp2/: CMakeLists.txt
C/CLib/: CMakeLists.txt  clib.h  clib_export.h
C/app1/: CMakeLists.txt
C/app2/: CMakeLists.txt
C/appc1/: CMakeLists.txt  main.c
C/appc2/: CMakeLists.txt  main.c
C/lib/: CMakeLists.txt
C/lib/include/: mylibc.h
C/mylibc/: CMakeLists.txt
C/mylibc/include/: export.h  num.h  str.h  utils.h
C/mylibc/src/: str.c
CApp/: CMakeLists.txt  CMakePresets_old.json
CApp/capp1/: CMakeLists.txt  main.c
CApp/capp2/: CMakeLists.txt  main.c
CApp/clib/: CMakeLists.txt  num.c  num.h  str.c  str.h  utils.c  utils.h
Cpp/: CMakeLists.txt  genBinding.txt
Cpp/App1/: CMakeLists.txt  main.cpp
Cpp/App2/: CMakeLists.txt  main.cpp
Cpp/AppCpp1/: CMakeLists.txt
Cpp/AppCpp2/: CMakeLists.txt
Cpp/CppApp1/: CMakeLists.txt
Cpp/CppApp2/: CMakeLists.txt  main.cpp
Cpp/CppLib/: CMakeLists.txt  Num.hpp  Str.hpp  Utils.hpp
Cpp/Lib/: CMakeLists.txt
Cpp/Lib/include/: Num.hpp  Str.hpp  Utils.hpp  export.hpp
Cpp/MyLibCpp/: CMakeLists.txt
Cpp/MyLibCpp/include/: MyLibCpp.hpp
Cpp/MyLibCpp/src/: Num.cpp  Str.cpp
CppApp/: CMakeLists.txt  CMakePresets_old.json  TestBindings.cs
CppApp/cppapp1/: CMakeLists.txt  main.cpp
CppApp/cppapp2/: CMakeLists.txt
CppApp/cpplib/: CMakeLists.txt  Num.cpp  Utils.cpp  cpplib.hpp  cpplib_export.hpp
Gtk3/: CMakeLists.txt
Gtk3/App1/: CMakeLists.txt  builder_window.h  main_window.c  manual_window.c  manual_window.h
Gtk3/App2/: CMakeLists.txt  main.c
Gtk3/Gtk3App/: CMakeLists.txt  builder_window.c  first_window.c  first_window.h  interface.ui  main.c  main_window.c  second_window.c  second_window.h  window_one.c  window_one.h  window_two.c  window_two.h
Gtk3/Gtk3Lib/: CMakeLists.txt  dialog.c  dialog.h
Gtk3/Lib/: dialog.c
Gtk3App/: CMakeLists.txt
Gtk3App/builder/: CMakeLists.txt  interface.ui  main.c  window.c  window.h
Gtk3App/common/: CMakeLists.txt  dialog.c  dialog.h
Gtk3App/manual/: CMakeLists.txt  main.c  window.c  window.h
Gtk4/: CMakeLists.txt
Gtk4/App1/: CMakeLists.txt  builder_window.c  interface.ui  main_window.c  main_window.h  manual_window.c  manual_window.h
Gtk4/App2/: CMakeLists.txt  main.c
Gtk4/App2Gtk4/: CMakeLists.txt
Gtk4/Gtk4App/: CMakeLists.txt  builder_window.c  builder_window.h  first_window.c  interface.ui  main.c  main_window.c  second_window.c  second_window.h  window_one.c  window_one.h  window_two.c  window_two.h
Gtk4/Gtk4Example/: CMakeLists.txt  example-0.c
Gtk4/Gtk4Lib/: CMakeLists.txt  dialog.c
Gtk4/Lib/: CMakeLists.txt  dialog.c
Gtk4App/: CMakeLists.txt  CMakePresets_old.json
Gtk4App/Gtk4App/: CMakeLists.txt  first_window.c  first_window.h  main.c  main_window.c  second_window.c
Gtk4App/Gtk4Builder/: CMakeLists.txt  interface.ui  main.c  window.c  window.h
Gtk4App/Gtk4Example/: example-1.c  example-3.c  example-4.c
Gtk4App/Gtk4Lib/: dialog.h
Gtk4App/Gtk4Manual/: CMakeLists.txt  window.c  window.h
Gtk4App/Gtk4MyDialog/: CMakeLists.txt  dialog.c  dialog.h
Gtkmm4/: CMakeLists.txt
Gtkmm4/AlertDialogExample/: CMakeLists.txt  examplewindow.hpp
Gtkmm4/App/: BuilderWindow.cpp  BuilderWindow.hpp  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main.cpp
Gtkmm4/Gtkmm4App/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  ManualWindow.cpp  ManualWindow.hpp  WindowOne.cpp  WindowOne.hpp  WindowTwo.cpp  WindowTwo.hpp  interface.ui
GtkmmApp/: CMakeLists.txt  CMakePresets_old.json
GtkmmApp/AlertDialogExample/: examplewindow.cpp  main.cpp
GtkmmApp/GtkmmApp/: BuilderWindow.cpp  BuilderWindow.hpp  CMakeLists.txt  MainHubWindow.cpp  MainHubWindow.hpp  ManualWindow.cpp  ManualWindow.hpp  interface.ui  main.cpp
SQLite/: CMakeLists.txt
SQLite/SQLiteApp/: CMakeLists.txt  database_manager.h  main.c
SQLite/SQLiteCppApp/: CMakeLists.txt
SQLiteApp/: CMakePresets_old.json  database_manager.c
SQLiteCppApp/: CMakeLists.txt  CMakePresets_old.json  main.cpp
WxWidgets/: CMakeLists.txt  main.cpp
cmake/: Settings.cmake
wxWidgets/: CMakeLists.txt
